style.css
/* Base */
body {
    font-family: monospace;
    font-size: 15px;
    margin: 0;
    background-color: #f9f9f9;
    color: #111;
    transition: background 0.3s, color 0.3s;
    
}

/* Header */
header {
    background-color: #2c3e50;
    padding: 12px 20px;
    position: sticky;
    top: 0;
}

/* NAVBAR FIX */
nav {
    background-color: #ff8a98;
    padding: 15px 0;
}

nav ul {
    list-style: none;
    display: flex;
    justify-content: center;
    margin: 0;
    padding: 0;
}

nav li {
    margin: 0 20px;
}

nav a, nav button {
    color: #ffffff;
    font-family: monospace;
    font-weight: bold;
    font-size: 20px;
    background: none;
    border: none;
    cursor: pointer;
}

nav a:hover {
    color: #1abc9c;
}

/* About section */
.about-container {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 30px;
    max-width:fit-content;
}

.profile-pic {
    object-fit: cover;
    object-radius: 50%
}
.info {
    margin-bottom: 15px;
    line-height: 1.5;
    font-family: monospace;
    font-size: 18px;
}
.icons a {
    margin-right: 12px;
    font-size: 20px;
    color: #1abc9c;
    transition: color 0.3s;
}

.icons a:hover {
    color: #16a085;
}
.custom-icon {
    width: 20px;
    height: 20px;
    vertical-align: middle;
    filter: invert(40%) sepia(60%) saturate(500%) hue-rotate(160deg);
}
/* Dark mode adjustment */
body.dark-mode .icons a {
    color: #4dd0e1;
}
/* Sections */
section {
    max-width: 800px;
    margin: 60px auto;
    padding: 0 20px;
}

h1 {
    margin-bottom: 10px;
    font-family:monospace;
    font-size: 40px;
}

h2 {
    border-bottom: 2px solid #1abc9c;
    padding-bottom: 5px;
}

/* Links */
a {
    color: #1abc9c;
}

a:hover {
    text-decoration: underline;
}

/* Dark Mode */
dark-mode nav {
    background-color: grey;
}

body.dark-mode {
    background-color: #121212;
    color: #eee;
}

body.dark-mode header {
    background-color: #1f1f1f;
}

body.dark-mode a {
    color: #4dd0e1;
}

